# bff

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
include/: bff.hpp  colors.hpp  command.hpp  commandline.hpp  common.hpp  event_handler.hpp  fs.hpp  key_handler.hpp  signal.hpp  window.hpp
include/components/: browser.hpp  command_line.hpp  pane.hpp  parent_browser.hpp  title_bar.hpp  window.hpp
src/: bff.cpp  colors.cpp  command.cpp  commandline.cpp  event_handler.cpp  fs.cpp  key_handler.cpp  main.cpp  window.cpp
src/components/: browser.cpp  command_line.cpp  pane.cpp  parent_browser.cpp  title_bar.cpp  window.cpp
